Public export of Nexus code:   - aedd3b3e1f11de42e7ea6fb50db8e8a6617f04e8 by Nicholas Blair <nblair@sonatype.com>
GitOrigin-RevId: aedd3b3e1f11de42e7ea6fb50db8e8a6617f04e8